<resources>
    <string name="app_name">Zillz</string>
    <string name="integer_zero">0</string>
    <string name="integer_four">4</string>
    <string name="soon_tm">Soon …</string>
    <string name="home_play">Play</string>
    <string name="home_leaderboard">Leaderboards</string>
    <string name="home_achievement">Achievements</string>
    <string name="home_about">About</string>
    <string name="home_sign_in">Sign in</string>
    <string name="home_sign_info">Sign in with your Google+ account to boast of your score and achievements with your friends.</string>
    <string name="home_not_sign_in_leaderboard">Sign in with Google to see the leaderboards.</string>
    <string name="home_not_sign_in_achievement">Sign in with Google to unlock achievements.</string>
    <string name="home_sign_out">Sign out</string>
    <string name="home_sign_out_confirm_dialog_message">Are you sure you wish to sign out?</string>
    <string name="home_sign_out_success">You’ve successfully signed out.</string>
    <string name="home_internet_unavailable">Please connect to the Internet.</string>
    <string name="home_profile">Profile</string>
    <string name="home_device_not_compatible">Sorry, you device appears to be incompatible with the Game.</string>
    <string name="home_i_button">i</string>
    <string name="home_help_button">\?</string>
    <string name="home_i_button_on_long_press">About</string>
    <string name="home_help_button_on_long_press">Help</string>
    <string name="in_game_kill_counter">Frag: %1$d</string>
    <string name="in_game_combo_counter">x %1$d</string>
    <string name="in_game_score">Score: %1$d</string>
    <string name="in_game_time">Time: %1$d s</string>
    <string name="in_game_no_ammo_message">No Ammo</string>
    <string name="level_chooser">Select a mission</string>
    <string name="leaderboard_chooser_title">Select leaderboard</string>
    <string name="leaderboard_chooser_title_overall_ranking">Overall Ranking</string>
    <string name="leaderboard_chooser_title_sprint">Scout First!</string>
    <string name="leaderboard_chooser_time_limited_level_2_description">60 seconds High Scores.</string>
    <string name="leaderboard_chooser_title_marathon">Prove your stamina</string>
    <string name="leaderboard_chooser_title_survival">The Final Battle</string>
    <string name="leaderboard_chooser_title_death_to_the_king">Death To The King</string>
    <string name="leaderboard_chooser_title_memorize">Brainteaser</string>
    <string name="leaderboard_chooser_title_twenty_in_a_row">Everything is an illusion…</string>
    <string name="game_mode_required_message_twenty_in_a_row">Everything is an illusion: the Corporal Rank of the mission \"Scout First\" is required.</string>
    <string name="game_mode_required_message_marathon">Prove your Stamina: the Corporal Rank of the mission \"Everything is an illusion\" is required.</string>
    <string name="game_mode_required_message_memorize">Brainteaser: the Corporal Rank of the mission \"Prove your Stamina\" is required.</string>
    <string name="game_mode_required_message_death_to_the_king">Death to the King: the Corporal Rank of the mission \"Brainteaser\" is required.</string>
    <string name="game_mode_required_message_survival">The Final Battle: the Corporal Rank of the mission \"Death to the King\" is required.</string>
    <string name="game_mode_title_tutorial">Tutorial : Learn how to play this game.</string>
    <string name="game_mode_title_sprint">Scouts First!</string>
    <string name="game_mode_title_marathon">Prove your Stamina</string>
    <string name="game_mode_title_survival">The Final Battle</string>
    <string name="game_mode_title_death_to_the_king">Death to the King</string>
    <string name="game_mode_title_twenty_in_a_row">Everything is an illusion…</string>
    <string name="game_mode_title_memorize">Brainteaser</string>
    <string name="game_mode_rank_rules_death_to_the_king">Complete the mission in %1$.1f seconds or less.</string>
    <string name="game_mode_rank_rules_death_to_the_king_deserter">At least, Complete the mission.</string>
    <string name="game_mode_rank_rules_memorize">Clean the wave %1$d.</string>
    <string name="game_mode_rank_rules_sprint">Complete the mission with a score of %1$d or higher.</string>
    <string name="game_mode_rank_rules_sprint_deserter">At least, Complete the mission.</string>
    <string name="game_mode_rank_rules_marathon">Prove your stamina with a score of %1$d or higher.</string>
    <string name="game_mode_rank_rules_marathon_deserter">At least, come to the end of the mission to prove your stamina.</string>
    <string name="game_mode_rank_rules_twenty_in_a_row">Kill 20 baby bats in a row in less than %1$d seconds.</string>
    <string name="game_mode_rank_rules_twenty_in_a_row_deserter">Kill 20 baby bats in a row.</string>
    <string name="game_mode_rank_rules_survival">Stay alive long enough to get a score of %1$d or higher.</string>
    <string name="game_mode_rank_rules_survival_deserter">At least, survive to the mission.</string>
    <string name="game_mode_description_sprint">
        Great Batter and his friends have heard that you joined the bats hunter army.
        Be ready to defeat the first waves of scouts that are heading towards you.
        \nNo quarter and no mercy!
    </string>
    <string name="game_mode_description_twenty_in_a_row">
        Don’t fall into Great Batter’s trap!
        These cute little bats have been send in order to distabilize you and play with your emotions,
        but they are only an illusion! Batter masters the art of disguise,
        and he won’t hesitate to use it against hunters like you.
        Kill 20 baby bats in a row in order to show your determination.
        Miss only one hit, and you will have to restart from the beginning. Be accurate!
    </string>
    <string name="game_mode_description_marathon">
        You are now a serious threat to Great Batter and his sidekicks!
        A huge wave of bats are heading towards you, and they seem pretty angry.
        Prepare yourself for a long and exhausting battle.
        \n\nFor this long fight, you should use a bonus in order to not run out ammunition to quickly!
    </string>
    <string name="game_mode_description_survival">
        Now that you killed the king, bats and his sidekicks have  to nothing lose anymore.
        Prepare yourself for a last epic fight that can last days and nights!
        Each target you killed grants you a little more time.
        Take this opportunity to exterminate a lot of bats once and for all!
    </string>
    <string name="game_mode_description_death_to_the_king">
        No more bats dare challenge you! The king has decided to come in person to defeat you.
        Find him and kill as quickly as possible before he changes his mind.
        Be careful, the king never comes alone.
        Don’t lose time on his sidekicks and become the fastest bat hunter in the West.
        \n\nAs soon as you are ready, touch the screen to summon the king and his sidekicks.
        \n\nUnfortunately bonus are unavailable for this mission.</string>
    <string name="game_mode_description_memorize">
        Facing your bravery, Great Batter has no choice but changing his strategy!
        This time, a difficult brainteaser is what awaits you.
        Take the challenge and show him that a bat hunter must have an handy brain
        that can memorize several targets at the same time.
        \n\nYour mission is to memorize a bats list and then try to kill them in the correct order.
        On each new wave, one more bat is added to the wanted list.</string>
    <string name="score_number_of_bullets_fired">Bullets Fired</string>
    <string name="score_number_of_targets_killed">Targets Killed</string>
    <string name="score_max_combo">Max Combo</string>
    <string name="score_exp_earned">Exp Earned</string>
    <string name="score_final_score">Final Score</string>
    <string name="score_lost">lost</string>
    <string name="score_skip_button">Skip</string>
    <string name="score_replay_button">Replay</string>
    <string name="score_home_button">Home</string>
    <string name="score_share_button">Share</string>
    <string name="score_share_dialog">How do you want to share?</string>
    <string name="score_share_subject">Zillz Bat Hunter</string>
    <string name="score_share_content">I play Zillz(Bat Hunting). Can you beat my score : %1$d
        ? \n Get it at https://play.google.com/store/apps/details?id=com.tracchis.saopayne.zills \n  
    </string>
    <string name="sign_in_message">If you sign in with Google Plus, you will be able to share your
        score and achievements with other players and friends !
    </string>
    <string name="score_loot_title">During the hunt you found</string>
    <string name="score_loot_default">nothing.</string>
    <string name="score_title_fragment">Game over</string>
    <string name="score_title_grade">Rank :</string>
    <string name="score_title_score">Score :</string>
    <string name="score_title_details_card">Details </string>
    <string name="score_congratz_level_up">You have just leveled up.</string>
    <string name="score_congratz_rank_up">You have just increased your rank.</string>
    <string name="score_title_congratz_card">Congratulations !</string>
    <string name="score_current_exp">Exp %1$d/%2$d</string>
    <string name="score_added_exp">(+ %1$d)</string>
    <string name="about_title">Zillz</string>
    <string name="about_version_detail">version 1.0.1</string>
    <string name="about_developer_card_title">Developers</string>
    <string name="about_saopayne_name">Oyewale Ademola Sao</string>
    <string name="about_timileyin_name">Ogunyemi Timileyin</string>
    <string name="about_thanks_section">Special thanks to…</string>
    <string name="about_thanks_gdgoau">GDGOAU guys (Akapo Dami Francis, Oyewale Oyediran, Akinboyewa Richards, Shitu AbdulRahman,Obasa Adegoke, Nnanna Eze ) have been tremendous in shaping me to who I am today. Thanks</string>
    <string name="about_thanks_impact_makers"> Ogunyemi Timileyin for the tremendous input with images and graphics,Shoaga Victor for feedback and advice on development, Otaru Babatunde, Makanju Dami Perfect, Adeyemo Daniel for the encouragement.
      
    </string>
    <string name="tuto_default_title">Soon…</string>
    <string name="tuto_title_page_0">Zillz</string>
    <string name="tuto_title_page_1">In Game\nTargets</string>
    <string name="tuto_title_page_2">In Game\nTargets</string>
    <string name="tuto_title_page_3">In Game\nCombos</string>
    <string name="tuto_title_page_4">In Game\nMoving</string>
    <string name="tuto_title_page_5">In Game\nAmmunition</string>
    <string name="tuto_title_page_6">In Game\nAmmunition</string>
    <string name="tuto_title_page_7">Inventory\nCraft</string>
    <string name="tuto_title_page_8">Menu\nPlay</string>
    <string name="tuto_title_page_9">Menu\nProfile</string>
    <string name="tuto_title_page_10">Menu\nLeaderboards</string>
    <string name="tuto_title_page_11">Menu\nAchievements</string>
    <string name="tuto_title_page_12">Ready To\nFight</string>
    <string name="tuto_button_close">Close</string>
    <string name="tuto_default_fragment_content">Default Tuto Fragment</string>
    <string name="tuto_page_welcome_title">Welcome,</string>
    <string name="tuto_page_welcome_subtitle">Bat General.</string>
    <string name="tuto_page_welcome_content">Your mission is to seek, find and kill
        the bats living around you.
    </string>
    <string name="tuto_page_welcome_additional_text">Swipe right-to-left to learn more.</string>
    <string name="tuto_page_play_button_content">Select your favorite mode and hunt the bats around you.</string>
    <string name="tuto_page_profile_button_content">Follow your progress and discover information about your enemy.</string>
</resources>