<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dip"
        android:gravity="center"
        android:padding="@dimen/default_padding" >

        <!--   <com.google.android.gms.ads.AdView
            android:id="@+id/adView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_below="@+id/linearLayout3"
            android:layout_centerHorizontal="true"
            ads:adSize="SMART_BANNER"
            ads:adUnitId="a152c991568439f" >

        </com.google.android.gms.ads.AdView> -->
      

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/linearLayout2"
            android:layout_below="@+id/linearLayout"
            android:text="@string/about_developer_card_title"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/text_view_grey" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/linearLayout2"
            android:gravity="right"
            android:text="@string/about_saopayne_name"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView3"
            android:layout_alignParentTop="true"
            android:layout_alignRight="@+id/linearLayout2"
            android:background="@drawable/card_shadow_base"
            android:orientation="vertical"
            android:padding="@dimen/default_padding" >

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_title"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/text_view_grey" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="@string/about_version_detail"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/linearLayout2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/linearLayout3"
            android:layout_below="@+id/textView3"
            android:background="@drawable/card_shadow_base"
            android:padding="@dimen/default_padding" >

            <TextView
                android:id="@+id/textView4"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="Core Developer"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="false"
                android:layout_alignParentLeft="true"
                android:src="@drawable/tvbarthel_logo" />
        </RelativeLayout>

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView5"
            android:layout_below="@+id/textView5"
            android:text="@string/about_thanks_section"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/text_view_grey" />

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView6"
            android:layout_below="@+id/textView6"
            android:background="@drawable/card_shadow_base"
            android:orientation="vertical"
            android:padding="@dimen/default_padding" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/default_half_vertical_margin"
                android:gravity="right"
                android:text="@string/about_thanks_impact_makers"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="22dp"
                android:gravity="right"
                android:text="@string/about_thanks_gdgoau"
                android:textAppearance="?android:attr/textAppearanceSmall" />

        </LinearLayout>

    </RelativeLayout>

</ScrollView>